tests/__snapshots__/validation-toBeInstantiableWith-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  33 | describe("argument for 'source'", () => {
  34 |   test("must be provided", () => {
  35 |     expect().type.toBeInstantiableWith<[never]>();
     |     ~~~~~~
  36 |   });
  37 | 
  38 |   test("must be an instantiable expression", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:35:5

Error: An argument for 'source' must be an instantiable expression.

  37 | 
  38 |   test("must be an instantiable expression", () => {
  39 |     expect("abc" as any).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~
  40 |     expect("abc" as never).type.toBeInstantiableWith<[never]>();
  41 | 
  42 |     expect("abc").type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:39:12

Error: An argument for 'source' must be an instantiable expression.

  38 |   test("must be an instantiable expression", () => {
  39 |     expect("abc" as any).type.toBeInstantiableWith<[never]>();
  40 |     expect("abc" as never).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~
  41 | 
  42 |     expect("abc").type.toBeInstantiableWith<[never]>();
  43 |     expect(123).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:40:12

Error: An argument for 'source' must be an instantiable expression.

  40 |     expect("abc" as never).type.toBeInstantiableWith<[never]>();
  41 | 
  42 |     expect("abc").type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  43 |     expect(123).type.toBeInstantiableWith<[never]>();
  44 |     expect(false).type.toBeInstantiableWith<[never]>();
  45 |     expect(undefined).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:42:12

Error: An argument for 'source' must be an instantiable expression.

  41 | 
  42 |     expect("abc").type.toBeInstantiableWith<[never]>();
  43 |     expect(123).type.toBeInstantiableWith<[never]>();
     |            ~~~
  44 |     expect(false).type.toBeInstantiableWith<[never]>();
  45 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  46 |     expect(null).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:43:12

Error: An argument for 'source' must be an instantiable expression.

  42 |     expect("abc").type.toBeInstantiableWith<[never]>();
  43 |     expect(123).type.toBeInstantiableWith<[never]>();
  44 |     expect(false).type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  45 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  46 |     expect(null).type.toBeInstantiableWith<[never]>();
  47 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:44:12

Error: An argument for 'source' must be an instantiable expression.

  43 |     expect(123).type.toBeInstantiableWith<[never]>();
  44 |     expect(false).type.toBeInstantiableWith<[never]>();
  45 |     expect(undefined).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~
  46 |     expect(null).type.toBeInstantiableWith<[never]>();
  47 | 
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:45:12

Error: An argument for 'source' must be an instantiable expression.

  44 |     expect(false).type.toBeInstantiableWith<[never]>();
  45 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  46 |     expect(null).type.toBeInstantiableWith<[never]>();
     |            ~~~~
  47 | 
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
  49 |     expect(Person).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:46:12

Error: An argument for 'source' must be an instantiable expression.

  46 |     expect(null).type.toBeInstantiableWith<[never]>();
  47 | 
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~~
  49 |     expect(Person).type.toBeInstantiableWith<[never]>();
  50 |   });
  51 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:48:12

Error: An argument for 'source' must be an instantiable expression.

  47 | 
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
  49 |     expect(Person).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  50 |   });
  51 | 
  52 |   test("allowed expressions", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:49:12

Error: A type argument for 'Source' must be an instantiable type.

  61 |     type Never = never;
  62 | 
  63 |     expect<Any>().type.toBeInstantiableWith<[never]>();
     |            ~~~
  64 |     expect<Never>().type.toBeInstantiableWith<[never]>();
  65 | 
  66 |     expect<string>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:63:12

Error: A type argument for 'Source' must be an instantiable type.

  62 | 
  63 |     expect<Any>().type.toBeInstantiableWith<[never]>();
  64 |     expect<Never>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  65 | 
  66 |     expect<string>().type.toBeInstantiableWith<[never]>();
  67 |     expect<number>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:64:12

Error: A type argument for 'Source' must be an instantiable type.

  64 |     expect<Never>().type.toBeInstantiableWith<[never]>();
  65 | 
  66 |     expect<string>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  67 |     expect<number>().type.toBeInstantiableWith<[never]>();
  68 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  69 |     expect<undefined>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:66:12

Error: A type argument for 'Source' must be an instantiable type.

  65 | 
  66 |     expect<string>().type.toBeInstantiableWith<[never]>();
  67 |     expect<number>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  68 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  69 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  70 |     expect<null>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:67:12

Error: A type argument for 'Source' must be an instantiable type.

  66 |     expect<string>().type.toBeInstantiableWith<[never]>();
  67 |     expect<number>().type.toBeInstantiableWith<[never]>();
  68 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~
  69 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  70 |     expect<null>().type.toBeInstantiableWith<[never]>();
  71 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:68:12

Error: A type argument for 'Source' must be an instantiable type.

  67 |     expect<number>().type.toBeInstantiableWith<[never]>();
  68 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  69 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~
  70 |     expect<null>().type.toBeInstantiableWith<[never]>();
  71 | 
  72 |     expect<() => void>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:69:12

Error: A type argument for 'Source' must be an instantiable type.

  68 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  69 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  70 |     expect<null>().type.toBeInstantiableWith<[never]>();
     |            ~~~~
  71 | 
  72 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
  73 |     expect<Func>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:70:12

Error: A type argument for 'Source' must be an instantiable type.

  70 |     expect<null>().type.toBeInstantiableWith<[never]>();
  71 | 
  72 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~
  73 |     expect<Func>().type.toBeInstantiableWith<[never]>();
  74 | 
  75 |     expect<Person>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:72:12

Error: A type argument for 'Source' must be an instantiable type.

  71 | 
  72 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
  73 |     expect<Func>().type.toBeInstantiableWith<[never]>();
     |            ~~~~
  74 | 
  75 |     expect<Person>().type.toBeInstantiableWith<[never]>();
  76 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:73:12

Error: A type argument for 'Source' must be an instantiable type.

  73 |     expect<Func>().type.toBeInstantiableWith<[never]>();
  74 | 
  75 |     expect<Person>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  76 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
  77 | 
  78 |     expect<None>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:75:12

Error: A type argument for 'Source' must be an instantiable type.

  74 | 
  75 |     expect<Person>().type.toBeInstantiableWith<[never]>();
  76 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~~~
  77 | 
  78 |     expect<None>().type.toBeInstantiableWith<[never]>();
  79 |   });

       at ./__typetests__/toBeInstantiableWith.tst.ts:76:12

Error: A type argument for 'Source' must be an instantiable type.

  76 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
  77 | 
  78 |     expect<None>().type.toBeInstantiableWith<[never]>();
     |            ~~~~
  79 |   });
  80 | 
  81 |   test("allowed expressions", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:78:12

Error: An argument for 'Target' must be provided.

   96 | describe("type argument for 'Target'", () => {
   97 |   test("must be provided", () => {
   98 |     expect<Box<_>>().type.toBeInstantiableWith();
      |                           ~~~~~~~~~~~~~~~~~~~~
   99 |   });
  100 | 
  101 |   test("must be a tuple type", () => {

        at ./__typetests__/toBeInstantiableWith.tst.ts:98:27

Error: A type argument for 'Target' must be a tuple type.

  101 |   test("must be a tuple type", () => {
  102 |     // @ts-expect-error!
  103 |     expect<Box<_>>().type.toBeInstantiableWith<string>();
      |                                                ~~~~~~
  104 |   });
  105 | });
  106 | 

        at ./__typetests__/toBeInstantiableWith.tst.ts:103:48

